tests/e2e/validation-webhook/authorizations/invalid-output-type/policy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/kyverno-envoy-plugin/main/.schemas/json/authorizationpolicy-envoy-v1alpha1.json
apiVersion: envoy.kyverno.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: invalid-output-type
spec:
  authorizations:
  - expression: >
      'bye'
