tests/e2e/validation-webhook/authorizations/invalid-output-type/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: invalid-output-type
spec:
  steps: 
  - try:
    - create:
        file: ./policy.yaml
        expect:
        - check:
            ($error): |-
              admission webhook "kyverno-authz-server-validation.kyverno.svc" denied the request: AuthorizationPolicy.envoy.kyverno.io "invalid-output-type" is invalid: spec.authorizations[0].expression: Invalid value: "'bye'\n": rule output is expected to be of type envoy.service.auth.v3.CheckResponse
